--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
 	<h1>Hello page</h1>
-	<p class="msg">this is Thymeleaf sample page.</p>
+	<p class="msg" th:text="${msg}"></p>
 </body>
 </html>
