--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,13 +14,14 @@
 		color: gray;
 		margin: 5px 25px;
 	}
+	pre {
+		border: solid 3px #ddd;
+		padding: 10px;
+	}
 </style>
-<style th:include="part :: frag_style"></style>
 </head>
 <body>
-	<h1 th:text="#{content.title}">Hello page</h1>
-	<div th:include="part :: frag_body">
-		<p> this is original content.</p>
-	</div>
+	<h1>Index page</h1>
+	<pre th:text="${data}"></pre>
 </body>
 </html>
