--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,19 +47,23 @@
 			</ul>
 			<tr>
 				<td><label for="name">名前</label></td>
-				<td><input type="text" name="name" th:field="*{name}" /></td>
+				<td><input type="text" name="name" th:value="*{name}" th:errorclass="err" />
+				<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" th:errorclass="err"></div></td>
 			</tr>
 			<tr>
 				<td><label for="age">年齢</label></td>
-				<td><input type="text" name="age" th:field="*{age}" /></td>
+				<td><input type="text" name="age" th:value="*{age}" th:errorclass="err" />
+				<div th:if="${#fields.hasErrors('age')}" th:errors="*{age}" th:errorclass="err"></div></td>
 			</tr>
 			<tr>
 				<td><label for="mail">メール</label></td>
-				<td><input type="text" name="mail" th:field="*{mail}" /></td>
+				<td><input type="text" name="mail" th:value="*{mail}" th:errorclass="err" />
+				<div th:if="${#fields.hasErrors('mail')}" th:errors="*{mail}" th:errorclass="err"></div></td>
 			</tr>
 			<tr>
 				<td><label for="memo">メモ</label></td>
-				<td><textarea name="memo" rows="5" cols="20" th:field="*{memo}"></textarea></td>
+				<td><textarea name="memo" rows="5" cols="20" th:text="*{memo}" th:errorclass="err"></textarea>
+				<div th:if="${#fields.hasErrors('memo')}" th:errors="*{memo}" th:errorclass="err"></div></td>
 			</tr>
 			<tr><td><input type="submit" /></td></tr>
 		</form>
